--- a/EstacionamientoMVC/EstacionamientoMVC/Web.config
+++ b/EstacionamientoMVC/EstacionamientoMVC/Web.config
@@ -45,7 +45,7 @@
     </handlers>
   </system.webServer>
   <connectionStrings>
-    <add name="EstacionamientoMVCEntities" connectionString="metadata=res://*/Models.Estacionamiento.csdl|res://*/Models.Estacionamiento.ssdl|res://*/Models.Estacionamiento.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=EstacionamientoMVC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EstacionamientoMVCEntities" connectionString="metadata=res://*/Models.Estacionamiento.csdl|res://*/Models.Estacionamiento.ssdl|res://*/Models.Estacionamiento.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAXI\SQLEXPRESS;initial catalog=EstacionamientoMVC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
