--- a/TPFINAL/TF_Base/TF_Base.csproj
+++ b/TPFINAL/TF_Base/TF_Base.csproj
@@ -273,7 +273,9 @@
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -297,10 +299,11 @@
     <Content Include="Views\Cliente\Details.cshtml" />
     <Content Include="Views\Cliente\Create.cshtml" />
     <Content Include="Views\Cliente\Edit.cshtml" />
-    <Content Include="Views\Cliente\Delete.cshtml" />
     <Content Include="Views\Boleto\ListaBoletos.cshtml" />
     <Content Include="Views\_LayoutCliente.cshtml" />
     <Content Include="Views\Boleto\Historial.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Login.cshtml" />
+    <Content Include="Views\_LayoutLogin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
